--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -63,12 +63,12 @@ Exclude rendered CSS in meta tags on localhost, for development/convenience reas
 {%- comment -%}
 Migrate from theme to gymcms
 {%- endcomment -%}
-<link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_reg_it-webfont.woff2" as="font" type="font/woff2">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_bld_it-webfont.woff2" as="font" type="font/woff2">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_blk_it-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_reg_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_bld_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_blk_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
 {%- comment -%} Do we really need to load typekit?
 <script async defer src="//use.typekit.net/rhf0qta.js"></script>
