--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="{{ site.data.courses.GYM-018.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-018.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -16,12 +16,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-018.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-018.url }}">{{ site.data.courses.GYM-018.title }}</a></h2>
+                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-018.url }}">{{ site.data.courses.GYM-018.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-018.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -32,7 +32,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="{{ site.data.courses.GYM-016.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-016.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -40,12 +40,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-016.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-016.url }}">{{ site.data.courses.GYM-016.title }}</a></h2>
+                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-016.url }}">{{ site.data.courses.GYM-016.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-016.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -56,7 +56,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="{{ site.data.courses.GYM-015.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-015.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -64,12 +64,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-015.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-015.url }}">{{ site.data.courses.GYM-015.title }}</a></h2>
+                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-015.url }}">{{ site.data.courses.GYM-015.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-015.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
