--- a/_includes/courses/featured/full-courses.html
+++ b/_includes/courses/featured/full-courses.html
@@ -21,7 +21,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-107.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -45,7 +45,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-104.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -69,7 +69,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-103.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
