--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -21,7 +21,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-018.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -45,7 +45,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-016.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -69,7 +69,7 @@
                   </header>
                   <p>{{ site.data.courses.GYM-015.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
