Update courseware-related tab styling
- Add exclusion style rule for courses/about tab combo
- Resolve https://github.com/gymnasium/tracker/issues/330

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -166,6 +166,17 @@
   }
 }
 
+// Exclude courseware-related about pages /courseware/*/*/about from /courses page(s)
+
+.gym-course-about {
+  .main-nav {
+    .vbar a {
+      background-color: transparent;
+      box-shadow: none;
+    }
+  }
+}
+
 .utility-nav {
   display: none;
   background-color: black;
