--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -167,7 +167,7 @@
 }
 
 // Exclude courseware-related about pages /courseware/*/*/about from /courses page(s)
-
+// TODO: clean up after theme update is complete
 .gym-course-about {
   .main-nav {
     .vbar a {
