--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -1,75 +1,99 @@
 <div class="container">
-  <div class="white-panel">
-    <article class="courses-promo">
+  <article class="courses-promo">
+    <div class="white-panel">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h2>Most Popular This Week</h2>
+            <h2>{{ featured.gym_shorts.promo_1.label }}</h2>
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-018.poster_art }}" decoding="async" fetchpriority="high">
+                  <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                    <img alt="{{ courses[featured.gym_shorts.promo_1.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_1.ID].poster_art }}" decoding="async" fetchpriority="high">
+                  </a>
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <article>
                   <header>
-                    <hgroup>
-                      <p class="subhead all-caps"><b>{{ site.data.courses.GYM-018.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-018.url }}">{{ site.data.courses.GYM-018.title }}</a></h2>
-                    </hgroup>
+                    <p class="subhead all-caps">
+                      <b>{{ courses[featured.gym_shorts.promo_1.ID].topic }}</b>
+                    </p>
+                    <h2>
+                      <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                      {{ courses[featured.gym_shorts.promo_1.ID].title }}
+                      </a>
+                    </h2>
                   </header>
-                  <p>{{ site.data.courses.GYM-018.short_description }}</p>
+                  <p>{{ courses[featured.gym_shorts.promo_1.ID].short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                      <b>{{ featured.gym_shorts.promo_1.CTA }}</b>
+                    </a>
                   </div>
                 </article>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <h2>Accessibility Skills</h2>
+            <h2>{{ featured.gym_shorts.promo_2.label }}</h2>
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-016.poster_art }}" decoding="async" fetchpriority="high">
+                  <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                    <img alt="{{ courses[featured.gym_shorts.promo_2.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_2.ID].poster_art }}" decoding="async" fetchpriority="high">
+                  </a>
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <article>
                   <header>
-                    <hgroup>
-                      <p class="subhead all-caps"><b>{{ site.data.courses.GYM-016.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-016.url }}">{{ site.data.courses.GYM-016.title }}</a></h2>
-                    </hgroup>
+                    <p class="subhead all-caps">
+                      <b>{{ courses[featured.gym_shorts.promo_2.ID].topic }}</b>
+                    </p>
+                    <h2>
+                      <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                      {{ courses[featured.gym_shorts.promo_2.ID].title }}
+                      </a>
+                    </h2>
                   </header>
-                  <p>{{ site.data.courses.GYM-016.short_description }}</p>
+                  <p>{{ courses[featured.gym_shorts.promo_2.ID].short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                      <b>{{ featured.gym_shorts.promo_2.CTA }}</b>
+                    </a>
                   </div>
                 </article>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <h2>Benefits of Prototyping</h2>
+            <h2>{{ featured.gym_shorts.promo_3.label }}</h2>
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-015.poster_art }}" decoding="async" fetchpriority="high">
+                  <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                    <img alt="{{ courses[featured.gym_shorts.promo_3.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_3.ID].poster_art }}" decoding="async" fetchpriority="high">
+                  </a>
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <article>
                   <header>
-                    <hgroup>
-                      <p class="subhead all-caps"><b>{{ site.data.courses.GYM-015.topic }}</b></p>
-                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-015.url }}">{{ site.data.courses.GYM-015.title }}</a></h2>
-                    </hgroup>
+                    <p class="subhead all-caps">
+                      <b>{{ courses[featured.gym_shorts.promo_3.ID].topic }}</b>
+                    </p>
+                    <h2>
+                      <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                      {{ courses[featured.gym_shorts.promo_3.ID].title }}
+                      </a>
+                    </h2>
                   </header>
-                  <p>{{ site.data.courses.GYM-015.short_description }}</p>
+                  <p>{{ courses[featured.gym_shorts.promo_3.ID].short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button natural" href="{{ site.gymurl }}/{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
+                    <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                      <b>{{ featured.gym_shorts.promo_3.CTA }}</b>
+                    </a>
                   </div>
                 </article>
               </div>
@@ -77,6 +101,6 @@
           </div>
         </div>
       </div>
-    </article>
-  </div>
+    </div>
+  </article>
 </div>
