--- a/feeds/_partials/config.liquid
+++ b/feeds/_partials/config.liquid
@@ -6,7 +6,8 @@
   {
     "{{ hash[0] }}": {{ hash[1] | jsonify }}
   }
-  {% unless forloop.last %},{% endunless %}
 {%- endfor -%}
-,{"cms_url": "{{ site.url }}"},
-{"lms_url": "{{ site.lms_url }}"}
+{"cms_url": "{{ site.url }}"},
+{"lms_url": "{{ site.lms_url }}"},
+{"eleventy_url": "{{ site.eleventy_url }}"},
+{"astro_url": "{{ site.astro_url }}"}
