--- a/feeds/_partials/bios.liquid
+++ b/feeds/_partials/bios.liquid
@@ -4,7 +4,7 @@
     "id": "{{bio_hash[0]}}",
     "title": "{{bio.name}}",
     "subtitle": "{{bio.subtitle}}",
-    "img": "{{ site.url }}/img/webinar-bio-headshots/{{bio.headshot}}",
+    "img": "/img/webinar-bio-headshots/{{bio.headshot}}",
     "description": "{{bio.description | strip_html}}"
   }
   {% unless forloop.last %},{% endunless %}
